# hushlog

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
benchmarks/: test_benchmark_redaction.py
configuration/: index.html
docs/: api.md  configuration.md  index.md  quickstart.md  security-model.md
quickstart/: index.html
search/: search_index.json
security-model/: index.html
src/hushlog/: __init__.py  _config.py  _formatter.py  _json_formatter.py  _loguru.py  _patterns.py  _registry.py  _structlog.py  _types.py
tests/: conftest.py  test_config.py  test_coverage_gaps.py  test_formatter.py  test_fuzz.py  test_init.py  test_json_formatter.py  test_json_redaction.py  test_loguru.py  test_partial_masking.py  test_patterns.py  test_registry.py  test_structlog.py
tests/integration/: test_e2e_scenarios.py  test_json_pipeline.py  test_logging_pipeline.py
