[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hushlog"
version = "0.1.0a2"
description = "Zero-config PII redaction for Python logging"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Felipe Pires Morandini"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
    "Topic :: Security",
    "Typing :: Typed",
]
keywords = ["logging", "pii", "redaction", "security", "privacy"]

[project.urls]
Homepage = "https://github.com/FelipeMorandini/hushlog"
Repository = "https://github.com/FelipeMorandini/hushlog"
Issues = "https://github.com/FelipeMorandini/hushlog/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "mypy>=1.14,<1.19",
    "pre-commit>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hushlog"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
